Creando tablas de procesos y direciones